@@ -35,7 +35,7 @@ A:link, A:visited, A:active { text-decoration: underline }
 <li><a href="help.html">How to help</a></li>
 <li><a href="downloads.html">Downloads</a></li>
 <li><a href="news.html">News</a></li>
-<li><a href="XML.html">XML</a></li>
+<li><a href="XMLinfo.html">XML</a></li>
 <li><a href="XSLT.html">XSLT</a></li>
 <li><a href="architecture.html">libxml architecture</a></li>
 <li><a href="tree.html">The tree output</a></li>
